# PyQtForSoftimage

./: .hgignore  .hgtags  README  README.creole  README.md
src/: CMakeLists.txt  LICENSE  exampleui.ui  init_packages.py  pyqt_example.py  pyside_example.py  qtevents.py  sisignals.py
src/CMake/Modules/: FindSoftimage.cmake  LICENSE
src/PyQtWinMigrate/: LGPL  qmfcapp.sip  qtwinmigrate.sip  qwinhost.sip  qwinwidget.sip
src/PySoftimage/: LICENSE  __init__.py  plugin.py
src/Qt/: __init__.py
src/QtSoftimage/: CMakeLists.txt  LICENSE  qtkeyevents.py  qtsoftimage.cpp  qtsoftimage.h
src/blurApplication/: CMakeLists.txt  LICENSE  blurApplication.cpp
src/blurdev/: LICENSE  __init__.py  build.py  configset.py  debug.py  decorators.py  enum.py  prefs.py  template.py  version.py  zipper.py
src/blurdev/XML/: __init__.py  xmldocument.py  xmlelement.py
src/blurdev/config/: __init__.py  authorconfig.py
src/blurdev/cores/: __init__.py  core.py  motionbuildercore.py  softimagecore.py  studiomaxcore.py
src/blurdev/gui/: __init__.py  dialog.py  highlighter.py  window.py  winwidget.py  wizard.py
src/blurdev/ide/: __init__.py  documenteditor.py  finddialog.py  ideeditor.py  ideproject.py  ideprojectdialog.py  ideprojectfavoritesdialog.py  ideprojectitemdialog.py  idewizardbrowser.py  idewizardpreviewpage.py  main.py
src/blurdev/media/: __init__.py  functions.py
src/blurdev/models/: objecttreemodel.py
src/blurdev/resource/: designer_plugins.xml  palette.ui  tools_environments.xml
src/blurdev/tools/: __init__.py  tool.py  toolheader.py  (+5 more)
src/qtwinmigrate/: LICENSE
(+239 files in other folders)
